--- a/MIPS/db/ProcessadorMIPS.lpc.html
+++ b/MIPS/db/ProcessadorMIPS.lpc.html
@@ -16,6 +16,118 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >display5</TD>
+<TD >7</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >3</TD>
+<TD >7</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >display4</TD>
+<TD >7</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >3</TD>
+<TD >7</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >display3</TD>
+<TD >7</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >3</TD>
+<TD >7</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >display2</TD>
+<TD >7</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >3</TD>
+<TD >7</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >display1</TD>
+<TD >7</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >3</TD>
+<TD >7</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >display0</TD>
+<TD >7</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >3</TD>
+<TD >7</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >detectorSub0</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >UC</TD>
 <TD >8</TD>
 <TD >0</TD>
@@ -3349,7 +3461,7 @@
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >73</TD>
+<TD >105</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
