--- a/MIPS/db/ProcessadorMIPS.lpc.html
+++ b/MIPS/db/ProcessadorMIPS.lpc.html
@@ -16,6 +16,118 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >display5</TD>
+<TD >7</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >3</TD>
+<TD >7</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >display4</TD>
+<TD >7</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >3</TD>
+<TD >7</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >display3</TD>
+<TD >7</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >3</TD>
+<TD >7</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >display2</TD>
+<TD >7</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >3</TD>
+<TD >7</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >display1</TD>
+<TD >7</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >3</TD>
+<TD >7</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >display0</TD>
+<TD >7</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >3</TD>
+<TD >7</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >detectorSub0</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >UC</TD>
 <TD >8</TD>
 <TD >0</TD>
@@ -66,13 +178,13 @@
 <TR >
 <TD >fluxo_dados|regMEMWB1</TD>
 <TD >107</TD>
-<TD >4</TD>
+<TD >2</TD>
 <TD >0</TD>
-<TD >4</TD>
+<TD >2</TD>
 <TD >104</TD>
-<TD >4</TD>
-<TD >4</TD>
-<TD >4</TD>
+<TD >2</TD>
+<TD >2</TD>
+<TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -194,13 +306,13 @@
 <TR >
 <TD >fluxo_dados|regIDEX1</TD>
 <TD >160</TD>
-<TD >7</TD>
+<TD >2</TD>
 <TD >0</TD>
-<TD >7</TD>
+<TD >2</TD>
 <TD >157</TD>
-<TD >7</TD>
-<TD >7</TD>
-<TD >7</TD>
+<TD >2</TD>
+<TD >2</TD>
+<TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -306,13 +418,13 @@
 <TR >
 <TD >fluxo_dados|ULA|ula31</TD>
 <TD >9</TD>
-<TD >3</TD>
+<TD >4</TD>
 <TD >0</TD>
-<TD >3</TD>
+<TD >4</TD>
 <TD >5</TD>
-<TD >3</TD>
-<TD >3</TD>
-<TD >3</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -3301,7 +3413,7 @@
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >34</TD>
+<TD >33</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -3394,13 +3506,13 @@
 <TR >
 <TD >fluxo_dados</TD>
 <TD >16</TD>
+<TD >24</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >137</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >24</TD>
+<TD >103</TD>
+<TD >24</TD>
+<TD >24</TD>
+<TD >24</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
